# note2number

./: .gitignore  01_setup_with_bert.ipynb  README.md  main.ipynb  main.py  pyproject.toml
