[project]
name = "notes2numbers-public"
version = "0.1.0"
description = "MIMIC-IV clinical notes analysis using Google BigQuery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.25",
    "db-dtypes>=1.3",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "pyarrow>=17.0",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
    "sentence-transformers>=5.2.3",
    "lifelines>=0.30.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
